--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
 </head>
 
 <body>
-  
+  <div class="outer">
+    <div class="container">
+      <div class="form">
+        <header>
+          <h1>SignUp</h1>
+          <p>It just takes 30 seconds</p>
+        </header>
+        <form action="">
+          <label for="name">Full Name</label>
+          <input type="text" name="name" id="name" placeholder="John Doe">
+          <label for="email">Your Email</label>
+          <input type="email" name="email" id="email" placeholder="johndoe123@gmail.com">
+          <label for="password">Your New Password</label>
+          <input type="password" name="password" id="password" placeholder="at least 8 characters">
+          <button type="submit">Create Account</button>
+        </form>
+        <footer>
+          <p>Already have an Account? <a href="#">LogIn</a></p>
+        </footer>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
