Update: background circles added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+  <div class="circle circle-1"></div>
+  <div class="circle circle-2"></div>
   <div class="outer">
     <div class="container">
       <div class="form">
